@@ -1370,6 +1370,191 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testGetEffectiveLayoutVersion ()
+specifier|public
+name|void
+name|testGetEffectiveLayoutVersion
+parameter_list|()
+block|{
+name|assertEquals
+argument_list|(
+operator|-
+literal|63
+argument_list|,
+name|FSNamesystem
+operator|.
+name|getEffectiveLayoutVersion
+argument_list|(
+literal|true
+argument_list|,
+operator|-
+literal|60
+argument_list|,
+operator|-
+literal|61
+argument_list|,
+operator|-
+literal|63
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|-
+literal|61
+argument_list|,
+name|FSNamesystem
+operator|.
+name|getEffectiveLayoutVersion
+argument_list|(
+literal|true
+argument_list|,
+operator|-
+literal|61
+argument_list|,
+operator|-
+literal|61
+argument_list|,
+operator|-
+literal|63
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|-
+literal|62
+argument_list|,
+name|FSNamesystem
+operator|.
+name|getEffectiveLayoutVersion
+argument_list|(
+literal|true
+argument_list|,
+operator|-
+literal|62
+argument_list|,
+operator|-
+literal|61
+argument_list|,
+operator|-
+literal|63
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|-
+literal|63
+argument_list|,
+name|FSNamesystem
+operator|.
+name|getEffectiveLayoutVersion
+argument_list|(
+literal|true
+argument_list|,
+operator|-
+literal|63
+argument_list|,
+operator|-
+literal|61
+argument_list|,
+operator|-
+literal|63
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|-
+literal|63
+argument_list|,
+name|FSNamesystem
+operator|.
+name|getEffectiveLayoutVersion
+argument_list|(
+literal|false
+argument_list|,
+operator|-
+literal|60
+argument_list|,
+operator|-
+literal|61
+argument_list|,
+operator|-
+literal|63
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|-
+literal|63
+argument_list|,
+name|FSNamesystem
+operator|.
+name|getEffectiveLayoutVersion
+argument_list|(
+literal|false
+argument_list|,
+operator|-
+literal|61
+argument_list|,
+operator|-
+literal|61
+argument_list|,
+operator|-
+literal|63
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|-
+literal|63
+argument_list|,
+name|FSNamesystem
+operator|.
+name|getEffectiveLayoutVersion
+argument_list|(
+literal|false
+argument_list|,
+operator|-
+literal|62
+argument_list|,
+operator|-
+literal|61
+argument_list|,
+operator|-
+literal|63
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|-
+literal|63
+argument_list|,
+name|FSNamesystem
+operator|.
+name|getEffectiveLayoutVersion
+argument_list|(
+literal|false
+argument_list|,
+operator|-
+literal|63
+argument_list|,
+operator|-
+literal|61
+argument_list|,
+operator|-
+literal|63
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
